# Genesis

./: .gitignore  CMakeLists.txt  README.md  main.cpp  rename.py
metadata/: options.csv
src/: core.h  genesis.cpp  genesis.hpp
src/genlog/: log.cpp  log.hpp  logger.hpp
src/glfw/: window.cpp  window.hpp
src/shaders/: compile.sh  frag.spv  shader.frag  shader.vert  vert.spv  vertices.cpp  vertices.hpp
src/utils/: readfile.cpp
src/vulkan/: commandpool.cpp  commandpool.hpp  descriptorsetlayout.cpp  descriptorsetlayout.hpp  frameBuffers.cpp  frameBuffers.hpp  graphicsPipeline.cpp  graphicsPipeline.hpp  image.cpp  image.hpp  instance.cpp  instance.hpp  layouttransition.hpp  logicalDevice.cpp  logicalDevice.hpp  physicalDevice.cpp  physicalDevice.hpp  queues.cpp  queues.hpp  renderpass.cpp  renderpass.hpp  swapchain.cpp  swapchain.hpp  sync.cpp  sync.hpp  uniformbuffers.cpp  uniformbuffers.hpp  validationLayers.cpp  validationLayers.hpp  vulkan.cpp  vulkan.hpp  window.cpp  window.hpp
src/vulkan/core/: instance.cpp  instance.hpp  logicalDevice.cpp  logicalDevice.hpp  physicalDevice.cpp  physicalDevice.hpp  queues.cpp  queues.hpp
src/vulkan/debug/: validationLayers.cpp  validationLayers.hpp
src/vulkan/pipeline/: graphicsPipeline.cpp  graphicsPipeline.hpp  renderpass.cpp  renderpass.hpp
src/vulkan/resources/: descriptorsetlayout.cpp  descriptorsetlayout.hpp  frameBuffers.cpp  frameBuffers.hpp  image.cpp  image.hpp  layouttransition.cpp  layouttransition.hpp  uniformbuffers.cpp  uniformbuffers.hpp
src/vulkan/sync/: sync.cpp  sync.hpp
(+2 files in other folders)
